# logosdb

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.claude/: mcp.json
.claude/commands/: forget.md  index.md  search.md
.githooks/: README.md  install.sh  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mcp-publish.yml  n8n-publish.yml  npm-publish.yml  publish.yml  python.yml
.venv-test/: pyvenv.cfg
.vibe/: config.toml
.vibe/skills/ldb-forget/: SKILL.md
.vibe/skills/ldb-index/: SKILL.md
.vibe/skills/ldb-search/: SKILL.md
.vibe/skills/logosdb-memory/: SKILL.md
build-fuzz/: CMakeCache.txt  Makefile  cmake_install.cmake
build-san/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-san/Testing/Temporary/: CTestCostData.txt
build_batch/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  logosdb-bench  logosdb-cli  logosdb-test
build_manylinux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  logosdb-bench  logosdb-cli  logosdb-test
build_ubuntu_fix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  logosdb-bench  logosdb-cli  logosdb-test
build_wal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  logosdb-bench  logosdb-cli  logosdb-test
build_wal/Testing/Temporary/: CTestCostData.txt
build_windows_fix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/: sanitizer_ignorelist.txt
docs/: adr-002-training-free-quantization.md  rag-on-prem.md  sizing.md
examples/python/: basic_usage.py  clinical_notes_bilingual.py  clinical_notes_minimal.py  memory_efficient_rag.py  sentence_transformers_demo.py
include/logosdb/: logosdb.h
mcp/: .npmignore  README.md  eslint.config.js  package-lock.json  package.json
mcp/scripts/: mcp-stdio-smoke.mjs
mcp/src/: chunker.test.ts  chunker.ts  embeddings.ts  file-index-manifest.test.ts  file-index-manifest.ts  gitignore-walker.test.ts  gitignore-walker.ts  hybrid.test.ts  hybrid.ts  index.ts  metadata-filter.test.ts  metadata-filter.ts  quota.test.ts  quota.ts  security.test.ts  security.ts  store.test.ts  store.ts
n8n/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json
n8n/src/: index.ts
n8n/src/credentials/: LogosDbApi.credentials.ts
n8n/src/nodes/LogosDb/: LogosDb.node.ts
nodejs/: README.md  binding.gyp  package-lock.json  package.json
nodejs/lib/: index.js
nodejs/scripts/: vendor-core.mjs
nodejs/src/: node_logosdb.cpp
nodejs/test/: test.js
nodejs/types/: index.d.ts
plugins/codex-semantic-memory/: .mcp.json  AGENTS.md  README.md
plugins/codex-semantic-memory/.codex-plugin/: marketplace.json  plugin.json
plugins/codex-semantic-memory/scripts/: logosdb-mcp-wrap.sh
plugins/codex-semantic-memory/skills/semantic-memory/: SKILL.md
python/logosdb/: __init__.py  __main__.py  _core.pyi  camel.py  cohere.py  crewai.py  haystack.py  mem0.py  mistral.py  openai.py  sizing.py  superlinked.py  vibe.py
python/src/: bindings.cpp
src/: hnsw_index.cpp  hnsw_index.h  logosdb.cpp  metadata.cpp  metadata.h  platform.cpp  platform.h  storage.cpp  storage.h  wal.cpp  wal.h
tests/: test_basic.cpp  test_doctest.cpp  test_stress.cpp
tests/python/: test_anthropic.py  test_haystack.py  test_huggingface.py  test_integrations.py  test_langchain.py  test_llamaindex.py  test_mistral.py  test_openai.py  test_smoke.py  test_vibe.py
tools/: fuzz_jsonl_metadata.cpp  logosdb-bench.cpp  logosdb-cli.cpp
