[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "logosdb"
version = "0.1.0"
description = "Fast semantic vector database (HNSW + mmap) with Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jose", email = "jose@example.com" }]
requires-python = ">=3.9"
keywords = ["vector-database", "hnsw", "embeddings", "semantic-search", "nearest-neighbor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
test = ["pytest>=7"]
examples = ["sentence-transformers>=2.2"]

[project.urls]
Homepage = "https://github.com/jose-compu/logosdb"
Issues = "https://github.com/jose-compu/logosdb/issues"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
minimum-version = "build-system.requires"
wheel.packages = ["python/logosdb"]
wheel.expand-macos-universal-tags = false

[tool.scikit-build.cmake.define]
LOGOSDB_BUILD_PYTHON = "ON"
LOGOSDB_BUILD_TOOLS = "OFF"
LOGOSDB_BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
